<?xml version="1.0" encoding="utf-8"?>
<!--*************************************************************************-->
<!-- SCICHART® Copyright SciChart Ltd. 2011-2017. All rights reserved. -->
<!--   -->
<!-- Web: http://www.scichart.com -->
<!-- Support: support@scichart.com -->
<!-- Sales:   sales@scichart.com -->
<!--  -->
<!-- trader_fragment.xml is part of the SCICHART® Showcases. Permission is hereby granted -->
<!-- to modify, create derivative works, distribute and publish any part of this source -->
<!-- code whether for commercial, private or personal use. -->
<!--  -->
<!-- The SCICHART® Showcases are distributed in the hope that they will be useful, but -->
<!-- without any warranty. It is provided "AS IS" without warranty of any kind, either -->
<!-- expressed or implied. -->
<!--*************************************************************************-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:scichart="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="com.scichart.scishowcase.R" />
        <import type="com.scichart.charting.modifiers.DefaultAnnotationFactory" />
        <import type="com.scichart.scishowcase.viewModels.trader.CustomAnnotationTypes" />
        <variable
            name="viewModel"
            type="com.scichart.scishowcase.viewModels.trader.TraderViewModel" />
    </data>

    <LinearLayout
        style="@style/ExampleSettingsPopupStyle"
        android:background="@color/color_primary_dark"
        android:orientation="vertical">

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.showMovingAverage50}"
            android:text="@string/moving_average_50" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.showMovingAverage100}"
            android:text="@string/moving_average_100" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.showRsiPanel}"
            android:text="@string/rsi_panel" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.showMacdPanel}"
            android:text="@string/macd_panel" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.showAxisMarkers}"
            android:text="@string/axis_markers" />

    </LinearLayout>
</layout>