<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.scichart.scishowcase.viewModels.ecg.EcgHeartRateViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ecg_layout_background">

        <ImageView
            android:id="@+id/heartIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/heart_icon_24dp"
            android:visibility="@{viewModel.heartRateIconVisibility}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bpmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/bpm"
            android:textAlignment="center"
            android:textColor="@color/heart_rate_color"
            android:textStyle="normal|bold"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heartIcon" />

        <TextView
            android:id="@+id/ecgLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/ecg"
            android:textAlignment="viewStart"
            android:textColor="@color/heart_rate_color"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heartRateInfoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/heartRateInfo"
            android:textAlignment="viewStart"
            android:textColor="@color/heart_rate_color"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/bpmValueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@{viewModel.bpmValue}"
            android:textAlignment="textEnd"
            android:textColor="@color/heart_rate_color"
            android:textSize="36sp"
            android:textStyle="normal|bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="69"
            tools:textColor="@color/color_primary" />


    </android.support.constraint.ConstraintLayout>

</layout>